# raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  ersneo1tDesktopraytracerbuildsourceraytracer.exe  tasks.md
doc/: ubuntu.markup
documentation/: credits.md  documentation.md  license.md  solutions_theory_part.md  tasks.md  theoretical_tasks.md  uml_diagram.md
documentation/gimp/: installation_button.xcf
documentation/images/gimp-project-files/: raytracer_logo.xcf
framework/: CMakeLists.txt  animation.cpp  animation.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  fensterchen.hpp  hitpoint.cpp  hitpoint.hpp  light.hpp  material.cpp  material.hpp  pixel.cpp  pixel.hpp  ppmwriter.cpp  ppmwriter.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sdfManager.cpp  sdfManager.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  tasks.md  triangle.cpp  triangle.hpp  window.cpp  (+1 more)
framework/obsolete/: mat2.cpp  mat2.hpp  vec2.cpp  vec2.hpp
input/: animatedScene_0.sdf  materialsTest.sdf  simpleScene.sdf  spheresInSkyScene.sdf
output/: .gitignore  image.ppm
resource/: animatedScene_0.sdf  animation_0.sdf  animation_1.sdf  animation_2.sdf  animation_3.sdf  materials.sdf  materials_test.sdf  simpleScene.sdf  simple_scene.sdf  slides_background.sdf  spheresInSkyScene.sdf
source/: CMakeLists.txt  example.cpp  raytracer.cpp  sdfGenerator.cpp  tests.cpp
